# scalallvm

./: README.md  build.sbt
core/src/main/scala/: Main.scala
core/src/main/scala/scalallvm/: AddressSpace.scala  CodeGenerationKind.scala  CodeModel.scala  Context.scala  DataLayout.scala  Disposable.scala  InstructionBuilder.scala  LLVM.scala  LLVMObject.scala  Linkage.scala  Module.scala  OptimizationLevel.scala  RelocationModel.scala  Target.scala  TargetMachine.scala
core/src/main/scala/scalallvm/support/: ArrayView.scala  ContainerView.scala  FixedWidthInteger.scala  WideInteger.scala.scala
core/src/main/scala/scalallvm/types/: ArrayType.scala  FloatingPointType.scala  FunctionType.scala  Integer.scala  IntegerType.scala  LLVMArray.scala  Pointer.scala  PointerType.scala  Struct.scala  StructType.scala  Type.scala  TypeKind.scala  Void.scala  VoidType.scala
core/src/main/scala/scalallvm/values/: Alloca.scala  BasicBlock.scala  Branch.scala  Constant.scala  FloatingPoint.scala  Function.scala  Instruction.scala  Integer.scala  LLVMArray.scala  Load.scala  Poison.scala  Store.scala  Struct.scala  Switch.scala  Undefined.scala  Value.scala  ValueConversion.scala
core/src/test/scala/: BuilderTests.scala  DataLayoutTests.scala  ModuleTests.scala  TargetTests.scala  Util.scala
core/src/test/scala/support/: WideIntegerTests.scala
core/src/test/scala/types/: ArrayTypeTests.scala  FunctionTypeTests.scala  LLVMArrayTests.scala  PointerTests.scala  PointerTypeTests.scala  StructTests.scala  StructTypeTests.scala  TypeTests.scala
core/src/test/scala/values/: AllocaTests.scala  FunctionTests.scala  IntegerTests.scala  LLVMArrayTests.scala  LoadTests.scala  PoisonTests.scala  StoreTests.scala  StructTests.scala  UndefinedTests.scala
native/src/: CMakeLists.txt  bindings.cc
native/src/include/: scalallvm_CodeGeneration.hh  scalallvm_LLVM_00024.h  scalallvm_TaggedPointer.hh
(+1 files in other folders)
